# DASPi

./: .gitignore  LICENSE  README.md  TODO.md  makefile  output.txt  structure.txt
docs/: pxe.md  (+10 more)
software/: .gitignore  camera_dashboard.sh  distribute_and_run_aperturecomputemodule_code.sh  distribute_and_run_computemodule_code.sh  meson.build  output.txt
software/aperturecomputemodule/: cross-aperturecomputemodule.in  cross-aperturecomputemodule.txt  distribute_and_run_aperturecomputemodule_code.sh  meson.build
software/aperturecomputemodule/include/: DASPi-aperture.h  DASPi-aperture.tpp  event_loop.h
software/aperturecomputemodule/pch/: DASPi-trial_1d_pch.h
software/aperturecomputemodule/src/: DASPi-aperture.cpp
software/bin-aperturecomputemodule/aperturecomputemodule/: aperturecomputemodule
software/common/logger/: meson.build
software/common/scopedtimer/: meson.build
software/common/shapefunction/: meson.build
software/common/shapefunction/include/: DASPi-overlapshapefunction.tpp  DASPi-regularpolygonalshapefunction.h  DASPi-shapefunctiondatapacket.h
software/common/shapefunction/src/: main.cpp
software/common/udp/: meson.build
software/common/udp/include/: DASPi-gainmsg.h  DASPi-postprocessitem.h  DASPi-udp-srv.tpp
software/common/udp/src/: DASPi-udp-srv.cpp
software/computemodule/: cross-computemodule.in  cross-computemodule.txt  distribute_and_run_computemodule_code.sh  meson.build
software/computemodule/src/bittransformation/: DASPi-bittransformation.cpp
software/config/: camera-calibration-generated.txt  camera-calibration.example.txt  camera-calibration.txt  camera-intrinsics-module0.yml  camera-intrinsics-module1.yml  charuco-pose-report-calibrated.csv  charuco-pose-report.csv  daspi-charuco-observations-module0.csv  daspi-charuco-observations-module1.csv  relative-camera-pose-report-clean.csv  relative-camera-pose-report.csv
software/config/backup/: camera-intrinsics-module0.yml
software/config/charuco-captures/: calib_001-pose0-module0.csv  calib_001-pose0-module1.csv  calib_001-pose11-module0.csv  calib_001-pose2-module0.csv  calib_001-pose4-module0.csv  calib_001-pose5-module1.csv  calib_001-pose6-module0.csv  calib_001-pose6-module1.csv  calib_001-pose7-module1.csv  calib_swapped_001-pose0-module0.csv  calib_swapped_001-pose0-module1.csv  calib_swapped_001-pose1-module0.csv  calib_swapped_001-pose1-module1.csv  calib_swapped_001-pose3-module1.csv  calib_swapped_001-pose4-module0.csv  calib_swapped_002-pose15-module1.csv  calib_swapped_002-pose9-module0.csv  calib_swapped_005-pose0-attempt1-module1.csv  calib_swapped_005-pose0-module0.csv  calib_swapped_005-pose1-attempt1-module0.csv  calib_swapped_005-pose1-attempt1-module1.csv  calib_swapped_005-pose2-attempt1-module1.csv  calib_swapped_005-pose2-module0.csv  calib_swapped_005-pose3-attempt1-module0.csv  calib_swapped_005-pose3-attempt1-module1.csv  calib_swapped_005-pose4-module0.csv  calib_swapped_005-pose4-module1.csv  calib_swapped_005-pose5-attempt1-module0.csv  calib_swapped_005-pose5-attempt1-module1.csv  calib_swapped_005-pose6-attempt1-module0.csv  calib_swapped_005-pose6-module1.csv  calib_swapped_005-pose7-attempt2-module0.csv  calib_swapped_005-pose7-attempt2-module1.csv  calib_swapped_005-pose8-module0.csv  calib_swapped_005-pose8-module1.csv  calib_swapped_005-pose9-attempt1-module1.csv  calib_swapped_005-pose9-module0.csv  test_pose_id_001-pose0-module0.csv  test_pose_id_001-pose0-module1.csv  test_pose_id_002-pose0-module1.csv  (+14 more)
software/config/charuco-captures-old/: calib_001-pose1-module0.csv  calib_001-pose1-module1.csv  calib_001-pose10-module0.csv  calib_001-pose10-module1.csv  calib_001-pose11-module1.csv  calib_001-pose2-module1.csv  calib_001-pose3-module0.csv  calib_001-pose3-module1.csv  calib_001-pose4-module1.csv  calib_001-pose5-module0.csv  calib_001-pose9-module1.csv  calib_swapped_001-pose0-module1.csv  calib_swapped_001-pose1-module0.csv  calib_swapped_001-pose1-module1.csv  calib_swapped_001-pose10-module1.csv  calib_swapped_001-pose11-module0.csv  calib_swapped_001-pose11-module1.csv  calib_swapped_001-pose2-module1.csv  calib_swapped_001-pose3-module1.csv  calib_swapped_001-pose4-module1.csv  calib_swapped_001-pose5-module1.csv  calib_swapped_001-pose6-module1.csv  calib_swapped_001-pose7-module0.csv  calib_swapped_001-pose7-module1.csv  calib_swapped_001-pose9-module0.csv  calib_swapped_001-pose9-module1.csv
software/docs/: Icosahedron_flat.xcf
software/docs/aperture/lens/: notes.txt
software/docs/images/: Icosahedron_flat.xcf
software/scripts/: .build-aperturecomputemodule.sh.swp  build-aperturecomputemodule.sh  camera_dashboard.sh  common_deploy.sh  distribute_and_run_aperturecomputemodule_code.sh  distribute_and_run_computemodule_code.sh  old-distribute_and_run_aperturecomputemodule_code.sh  old-fetch_files.sh  output.txt  seam_image_collection_calibration.sh  sync-sysroot-from-pxeserver.sh  update_sysroot.sh
software/src/: meson.build
software/src/aperturecomputemodule/: TODO.md  cross-aperturecomputemodule.txt  meson.build
software/src/aperturecomputemodule/include/: DASPi-aperture.h  DASPi-aperture.tpp  event_loop.h
software/src/aperturecomputemodule/src/: DASPi-aperture.cpp  event_loop.cpp  main.cpp
software/src/common/: meson.build
software/src/common/cameramodel/: TODO.md  meson.build  old-meson.build
software/src/common/include/: DASPi-config.h  DASPi-fps-counter.h  DASPi-shape-config.h
software/src/common/shapefunction/: meson.build
software/src/common/udp/: meson.build
software/src/computemodule/: TODO.md  cross-computemodule.ini  cross-computemodule.txt  meson.build
software/src/computemodule/include/: DASPi-aperture-client.h  DASPi-aperture-client.tpp  DASPi-aperture-peer.h  DASPi-aperture-peer.tpp  DASPi-aperturepeerbase.h  DASPi-bayerstats.h  DASPi-benchmark-config.h  DASPi-camera_setup.h  DASPi-createaperturepeersimpl.h  DASPi-fisheye-params.h  DASPi-flat_triangle_map.h  DASPi-live-frame-buffer.h  DASPi-livecamerastate.h  DASPi-logicalstreamrole.h  DASPi-networkaddressplan.h  DASPi-programoptions.h  (+6 more)
(+170 files in other folders)
