project('DASPi', 'c', 'cpp',
  default_options : [
    'werror=true',
    'warning_level=2',
    'cpp_std=c++20',
    'buildtype=release',
  ]
)

#subdir('common/imagemapping')
subdir('common/logger')
subdir('common/scopedtimer')
subdir('common/shapefunction')
subdir('common/udp')
subdir('aperturecomputemodule')
subdir('computemodule')
