shapefunction_inc = include_directories('include')


#shapefunction_lib = static_library(
#  'shapefunction',
#  [
#    'src/overlapshapefunction.cpp',
#    'src/globallinearshapefunction.cpp',
#  ],
#  include_directories : shapefunction_inc,
#)

shapefunction_dep = declare_dependency(
  include_directories : shapefunction_inc,
#  link_with : shapefunction_lib
)

